--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,6 +3,7 @@
 
 @breakpointMobile: ~"(max-width: 767px)";
 @breakpointTablet: ~"(min-width: 768px) and (max-width: 1023px)";
+@breakpointMobaTablet: ~"(max-width:1023px)";
 
 * {
     margin: 0;
@@ -23,7 +24,7 @@ li {
     max-width: 1024px;
     width: 100%;
     margin: 0 auto;
-    @media @breakpointTablet {
+    @media @breakpointMobaTablet {
         max-width: 80%;
     }
 }
