--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,7 +3,6 @@
 
 @breakpointMobile: ~"(max-width: 767px)";
 @breakpointTablet: ~"(min-width: 768px) and (max-width: 1023px)";
-@breakpointMobaTablet: ~"(max-width:1023px)";
 
 * {
     margin: 0;
@@ -24,7 +23,7 @@ li {
     max-width: 1024px;
     width: 100%;
     margin: 0 auto;
-    @media @breakpointMobaTablet {
+    @media @breakpointMobile, @breakpointTablet {
         max-width: 80%;
     }
 }
